
	* xkb/xkbUtils.c:
	Fix two of the more glaring unconditional-NULL-dereference screwups.
	There are many more left.

	* xkb/Makefile.am:
	* xkb/xkbconfig.c:
	* xkb/ddxConfig.c:
	* xkb/xkbInit.c:
	Remove weirdo XkbCF pre-configuration code.

	* xkb/xkb.h:
	* xkb/xkb.c:
	Remove INITARGS braindamage, change to void; add XkbExtensionInit
	prototype to xkb.h.
	Explicitly initialise nTypes in xkb.c.

2006-03-25  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xf86Bus.c:
	* hw/xfree86/common/xf86Configure.c:
	* hw/xfree86/common/xf86Cursor.c:
	* hw/xfree86/common/xf86DGA.c:
	* hw/xfree86/common/xf86DPMS.c:
	* hw/xfree86/common/xf86Debug.c:
	* hw/xfree86/common/xf86Events.c:
	* hw/xfree86/common/xf86Globals.c:
	* hw/xfree86/common/xf86Helper.c:
	* hw/xfree86/common/xf86Init.c:
	* hw/xfree86/common/xf86Io.c:
	* hw/xfree86/common/xf86MiscExt.c:
	* hw/xfree86/common/xf86Mode.c:
	* hw/xfree86/common/xf86Option.c:
	* hw/xfree86/common/xf86RandR.c:
	* hw/xfree86/common/xf86Versions.c:
	* hw/xfree86/common/xf86VidMode.c:
	* hw/xfree86/common/xf86Xinput.c:
	* hw/xfree86/common/xf86cmap.c:
	* hw/xfree86/common/xf86fbBus.c:
	* hw/xfree86/common/xf86fbman.c:
	* hw/xfree86/common/xf86isaBus.c:
	* hw/xfree86/common/xf86noBus.c:
	* hw/xfree86/common/xf86pciBus.c:
	* hw/xfree86/common/xf86sbusBus.c:
	* hw/xfree86/common/xf86xv.c:
	* hw/xfree86/common/xf86xvmc.c:
	* hw/xfree86/common/xisb.c:
	* hw/xfree86/dummylib/xf86addrestolist.c:
	* hw/xfree86/dummylib/xf86allocscripi.c:
	* hw/xfree86/dummylib/xf86drvmsg.c:
	* hw/xfree86/dummylib/xf86drvmsgverb.c:
	* hw/xfree86/dummylib/xf86errorf.c:
	* hw/xfree86/dummylib/xf86errorfverb.c:
	* hw/xfree86/dummylib/xf86getpagesize.c:
	* hw/xfree86/dummylib/xf86getverb.c:
	* hw/xfree86/dummylib/xf86msg.c:
	* hw/xfree86/dummylib/xf86msgverb.c:
	* hw/xfree86/dummylib/xf86opt.c:
	* hw/xfree86/dummylib/xf86screens.c:
	* hw/xfree86/loader/loader.c:
	* hw/xfree86/loader/loadext.c:
	* hw/xfree86/loader/loadfont.c:
	* hw/xfree86/loader/loadmod.c: