@@ -16,6 +16,10 @@
 	prototype to xkb.h.
 	Explicitly initialise nTypes in xkb.c.
 
+	* xkb/xkbfmisc.c:
+	* xkb/maprules.c:
+	Bug #3819: Remove open-coding of strcasecmp.
+
 2006-03-25  Adam Jackson  <ajax@freedesktop.org>
 
 	* hw/xfree86/common/xf86Bus.c:
